# soundtable

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  Dockerfile  Earthfile  README.md
.github/: FUNDING.yml  copilot-instructions.md
core/: CMakeLists.txt
core/src/: AudioEngine.cpp  AudioEngine.h  InteractionSystem.cpp  InteractionSystem.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponentHelpers.cpp  MainComponentHelpers.h  MainComponent_Atlas.cpp  MainComponent_Audio.cpp  MainComponent_AudioRouting.cpp  MainComponent_Input.cpp  MainComponent_LoopFileBrowser.cpp  MainComponent_LoopFileBrowser.h  MainComponent_ModulePanelEnvelope.cpp  MainComponent_ModulePanelEnvelope.h  MainComponent_Paint.cpp  MainComponent_TextScroll.cpp  MainComponent_TextScroll.h  MainComponent_XYControl.cpp  MainComponent_XYControl.h  RectaiLookAndFeel.cpp  RectaiLookAndFeel.h  SoundtableLookAndFeel.cpp  SoundtableLookAndFeel.h  TrackingOscReceiver.cpp  TrackingOscReceiver.h
core/src/core/: AudioGraph.cpp  AudioGraph.h  AudioModules.cpp  AudioModules.h  MidiTypes.h  ReactableRtpLoader.cpp  ReactableRtpLoader.h  ReactableRtzLoader.cpp  ReactableRtzLoader.h  SampleplaySynth.cpp  SampleplaySynth.h  Scene.cpp  Scene.h  SceneSerialization.cpp  SceneSerialization.h  SoundfontUtils.cpp  SoundfontUtils.h  Voices.cpp  Voices.h
patches/: 0001-JUCE  0002-JUCE
research/: Loopdemo.rtp  README.md  architecture_concepts.md  audio_graph_connection_buffers.md  loop_module_plan.md  progress.md  reactable_overview.md  reactable_requirements_and_use_cases.md  reactable_rtp_schema.md  reactivision_technical_notes.md  sequencer.md  soundwave_voices_refactor_plan.md  tech_stack.md  tuio-protocol.md  ui-interface.md
research/progress/: 2025-12-09.md  2025-12-10.md  2025-12-11.md  2025-12-12.md  2025-12-13.md  2025-12-15.md  2025-12-16.md  2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-21.md  2025-12-22.md  2025-12-23.md  2026-01-28.md
tests/: CMakeLists.txt  scene_tests.cpp  tracker_tests.cpp
tools/: list_sf2_presets.cpp
tracker/: CMakeLists.txt
tracker/src/: OscSender.cpp  OscSender.h  TrackerEngine.cpp  TrackerEngine.h  TrackerState.cpp  TrackerState.h  TrackerTypes.h  TuioNegotiation.cpp  TuioNegotiation.h  main.cpp
